Create basic layout for calculator buttons

--- a/index.html
+++ b/index.html
@@ -6,8 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Calculator</title>
     <script src = "script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="main">
+        <div id="calculator">
+            <div id="display">Display numbers here</div>
+            <div class="numButtons" id="firstRow">
+                <div>7</div>
+                <div>8</div>
+                <div>9</div>
+                <div>/</div>
+            </div>
+            <div class="numButtons" id="secondRow">
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+                <div>x</div>
+            </div>
+            <div class="numButtons" id="thirdRow">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>-</div>
+            </div>
+            <div class="numButtons" id="fourthRow">
+                <div>0</div>
+                <div>.</div>
+                <div>+</div>
+            </div>
+            <div class="numButtons" id="fifthRow">
+                <div>C</div>
+                <div>=</div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
