Add clear button, move = button to bottom row

--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
     <div id="main">
         <div id="calculator">
             <div id="display">Display numbers here</div>
-            <div class="numButtons" id="firstRow">
-                <div>7</div>
-                <div>8</div>
-                <div>9</div>
-                <div>/</div>
+            <div class="rows" id="firstRow">
+                <div class="numButtons">7</div>
+                <div class="numButtons">8</div>
+                <div class="numButtons">9</div>
+                <div class="numButtons">/</div>
             </div>
-            <div class="numButtons" id="secondRow">
-                <div>4</div>
-                <div>5</div>
-                <div>6</div>
-                <div>x</div>
+            <div class="rows" id="secondRow">
+                <div class="numButtons">4</div>
+                <div class="numButtons">5</div>
+                <div class="numButtons">6</div>
+                <div class="numButtons">x</div>
             </div>
-            <div class="numButtons" id="thirdRow">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>-</div>
+            <div class="rows" id="thirdRow">
+                <div class="numButtons">1</div>
+                <div class="numButtons">2</div>
+                <div class="numButtons">3</div>
+                <div class="numButtons">-</div>
             </div>
-            <div class="numButtons" id="fourthRow">
-                <div>0</div>
-                <div>.</div>
-                <div>+</div>
+            <div class="rows" id="fourthRow">
+                <div class="numButtons">0</div>
+                <div class="numButtons">.</div>
+                <div class="numButtons">+</div>
             </div>
-            <div class="numButtons" id="fifthRow">
-                <div>C</div>
-                <div>=</div>
+            <div class="rows" id="fifthRow">
+                <div class="numButtons">C</div>
+                <div class="numButtons">=</div>
             </div>
         </div>
     </div>
