--- a/index.html
+++ b/index.html
@@ -12,32 +12,9 @@
     <div id="main">
         <div id="calculator">
             <div id="display">Display numbers here</div>
-            <div class="rows" id="firstRow">
-                <div class="numButtons">7</div>
-                <div class="numButtons">8</div>
-                <div class="numButtons">9</div>
-                <div class="numButtons">/</div>
-            </div>
-            <div class="rows" id="secondRow">
-                <div class="numButtons">4</div>
-                <div class="numButtons">5</div>
-                <div class="numButtons">6</div>
-                <div class="numButtons">x</div>
-            </div>
-            <div class="rows" id="thirdRow">
-                <div class="numButtons">1</div>
-                <div class="numButtons">2</div>
-                <div class="numButtons">3</div>
-                <div class="numButtons">-</div>
-            </div>
-            <div class="rows" id="fourthRow">
-                <div class="numButtons">0</div>
-                <div class="numButtons">.</div>
-                <div class="numButtons">+</div>
-            </div>
-            <div class="rows" id="fifthRow">
-                <div class="numButtons">C</div>
-                <div class="numButtons">=</div>
+            <div id="buttonsGroup">
+                <div id="first3columns"></div>
+                <div id="lastcolumn"></div>
             </div>
         </div>
     </div>
