Arrange buttons in rough positions

--- a/index.html
+++ b/index.html
@@ -13,8 +13,29 @@
         <div id="calculator">
             <div id="display">Display numbers here</div>
             <div id="buttonsGroup">
-                <div id="first3columns"></div>
-                <div id="lastcolumn"></div>
+                <div id="first3columns">
+                    <div class="buttons">C</div>
+                    <div class="buttons">%</div>
+                    <div class="buttons">/</div>
+                    <div class="buttons">7</div>
+                    <div class="buttons">8</div>
+                    <div class="buttons">9</div>
+                    <div class="buttons">4</div>
+                    <div class="buttons">5</div>
+                    <div class="buttons">6</div>
+                    <div class="buttons">1</div>
+                    <div class="buttons">2</div>
+                    <div class="buttons">3</div>
+                    <div class="buttons">0</div>
+                    <div class="buttons">.</div>
+                    <div class="buttons">+/-</div>
+                </div>
+                <div id="lastcolumn">
+                    <div class="buttons">x</div>
+                    <div class="buttons">-</div>
+                    <div class="buttons">+</div>
+                    <div class="buttons">=</div>
+                </div>
             </div>
         </div>
     </div>
