Add IDs to buttons

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
             <div id="display">Display numbers here</div>
             <div id="buttonsGroup">
                 <div id="first3columns">
-                    <div class="buttons">C</div>
-                    <div class="buttons">%</div>
-                    <div class="buttons">/</div>
-                    <div class="buttons">7</div>
-                    <div class="buttons">8</div>
-                    <div class="buttons">9</div>
-                    <div class="buttons">4</div>
-                    <div class="buttons">5</div>
-                    <div class="buttons">6</div>
-                    <div class="buttons">1</div>
-                    <div class="buttons">2</div>
-                    <div class="buttons">3</div>
-                    <div class="buttons">0</div>
-                    <div class="buttons">.</div>
-                    <div class="buttons">+/-</div>
+                    <div class="buttons" id="clear">C</div>
+                    <div class="buttons" id="percent">%</div>
+                    <div class="buttons" id="divide">/</div>
+                    <div class="buttons" id="seven">7</div>
+                    <div class="buttons" id="eight">8</div>
+                    <div class="buttons" id="nine">9</div>
+                    <div class="buttons" id="four">4</div>
+                    <div class="buttons" id="five">5</div>
+                    <div class="buttons" id="six">6</div>
+                    <div class="buttons" id="one">1</div>
+                    <div class="buttons" id="two">2</div>
+                    <div class="buttons" id="three">3</div>
+                    <div class="buttons" id="zero">0</div>
+                    <div class="buttons" id="decimal">.</div>
+                    <div class="buttons" id="plusMinus">+/-</div>
                 </div>
                 <div id="lastcolumn">
-                    <div class="buttons">x</div>
-                    <div class="buttons">-</div>
-                    <div class="buttons">+</div>
-                    <div class="buttons">=</div>
+                    <div class="buttons" id="multiply">x</div>
+                    <div class="buttons" id="subtract">-</div>
+                    <div class="buttons" id="add">+</div>
+                    <div class="buttons" id="equals">=</div>
                 </div>
             </div>
         </div>
