Change add/subtract/multiply/divide functions. Add operate function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="first3columns">
                     <div class="buttons" id="clear">C</div>
                     <div class="buttons" id="percent">%</div>
-                    <div class="buttons" id="divide">/</div>
+                    <div class="buttons" id="divide">&#247;</div>
                     <div class="buttons" id="seven">7</div>
                     <div class="buttons" id="eight">8</div>
                     <div class="buttons" id="nine">9</div>
