Rearrange buttons with flexbox

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <div class="buttons" id="plusMinus">+/-</div>
                 </div>
                 <div id="lastcolumn">
-                    <div class="buttons" id="multiply">x</div>
-                    <div class="buttons" id="subtract">-</div>
-                    <div class="buttons" id="add">+</div>
-                    <div class="buttons" id="equals">=</div>
+                    <div class="buttons lastcolumnbuttons" id="multiply">x</div>
+                    <div class="buttons lastcolumnbuttons" id="subtract">-</div>
+                    <div class="buttons lastcolumnbuttons" id="add">+</div>
+                    <div class="buttons lastcolumnbuttons" id="equals">=</div>
                 </div>
             </div>
         </div>
