Change html from divs to button elements. Grow buttons to take up entire space

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
             <div id="display">Display numbers here</div>
             <div id="buttonsGroup">
                 <div id="first3columns">
-                    <div class="buttons" id="clear">C</div>
-                    <div class="buttons" id="percent">%</div>
-                    <div class="buttons" id="divide">&#247;</div>
-                    <div class="buttons" id="seven">7</div>
-                    <div class="buttons" id="eight">8</div>
-                    <div class="buttons" id="nine">9</div>
-                    <div class="buttons" id="four">4</div>
-                    <div class="buttons" id="five">5</div>
-                    <div class="buttons" id="six">6</div>
-                    <div class="buttons" id="one">1</div>
-                    <div class="buttons" id="two">2</div>
-                    <div class="buttons" id="three">3</div>
-                    <div class="buttons" id="zero">0</div>
-                    <div class="buttons" id="decimal">.</div>
-                    <div class="buttons" id="plusMinus">+/-</div>
+                    <button class="buttons firstcolumnbuttons" id="clear">C</button>
+                    <button class="buttons firstcolumnbuttons" id="percent">%</button>
+                    <button class="buttons firstcolumnbuttons" id="divide">&#247;</button>
+                    <button class="buttons firstcolumnbuttons" id="seven" value="7">7</button>
+                    <button class="buttons firstcolumnbuttons" id="eight" value="8">8</button>
+                    <button class="buttons firstcolumnbuttons" id="nine" value="9">9</button>
+                    <button class="buttons firstcolumnbuttons" id="four" value="4">4</button>
+                    <button class="buttons firstcolumnbuttons" id="five" value="5">5</button>
+                    <button class="buttons firstcolumnbuttons" id="six" value="6">6</button>
+                    <button class="buttons firstcolumnbuttons" id="one" value="1">1</button>
+                    <button class="buttons firstcolumnbuttons" id="two" value="2">2</button>
+                    <button class="buttons firstcolumnbuttons" id="three" value="3">3</button>
+                    <button class="buttons firstcolumnbuttons" id="zero" value="0">0</button>
+                    <button class="buttons firstcolumnbuttons" id="decimal" value=".">.</button>
+                    <button class="buttons firstcolumnbuttons" id="plusMinus">+/-</button>
                 </div>
                 <div id="lastcolumn">
-                    <div class="buttons lastcolumnbuttons" id="multiply">x</div>
-                    <div class="buttons lastcolumnbuttons" id="subtract">-</div>
-                    <div class="buttons lastcolumnbuttons" id="add">+</div>
-                    <div class="buttons lastcolumnbuttons" id="equals">=</div>
+                    <button class="buttons lastcolumnbuttons" id="multiply" value="*">x</button>
+                    <button class="buttons lastcolumnbuttons" id="subtract" value="-">-</button>
+                    <button class="buttons lastcolumnbuttons" id="add" value="+">+</button>
+                    <button class="buttons lastcolumnbuttons" id="equals" value="=">=</button>
                 </div>
             </div>
         </div>
