Add changeDisplay function

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div id="display">Display numbers here</div>
             <div id="buttonsGroup">
                 <div id="first3columns">
-                    <button class="buttons firstcolumnbuttons" id="clear">C</button>
+                    <button class="buttons firstcolumnbuttons" id="clear" value="clear">C</button>
                     <button class="buttons firstcolumnbuttons" id="percent">%</button>
-                    <button class="buttons firstcolumnbuttons" id="divide">&#247;</button>
+                    <button class="buttons firstcolumnbuttons operator" id="divide">&#247;</button>
                     <button class="buttons firstcolumnbuttons" id="seven" value="7">7</button>
                     <button class="buttons firstcolumnbuttons" id="eight" value="8">8</button>
                     <button class="buttons firstcolumnbuttons" id="nine" value="9">9</button>
@@ -31,10 +31,10 @@
                     <button class="buttons firstcolumnbuttons" id="plusMinus">+/-</button>
                 </div>
                 <div id="lastcolumn">
-                    <button class="buttons lastcolumnbuttons" id="multiply" value="*">x</button>
-                    <button class="buttons lastcolumnbuttons" id="subtract" value="-">-</button>
-                    <button class="buttons lastcolumnbuttons" id="add" value="+">+</button>
-                    <button class="buttons lastcolumnbuttons" id="equals" value="=">=</button>
+                    <button class="buttons lastcolumnbuttons operator" id="multiply" value="*">x</button>
+                    <button class="buttons lastcolumnbuttons operator" id="subtract" value="-">-</button>
+                    <button class="buttons lastcolumnbuttons operator" id="add" value="+">+</button>
+                    <button class="buttons lastcolumnbuttons operator" id="equals" value="=">=</button>
                 </div>
             </div>
         </div>
