Moddify changeDisplay function to evaluate multiple expressions in a row

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <button class="buttons lastcolumnbuttons operator" id="multiply" value="*">x</button>
                     <button class="buttons lastcolumnbuttons operator" id="subtract" value="-">-</button>
                     <button class="buttons lastcolumnbuttons operator" id="add" value="+">+</button>
-                    <button class="buttons lastcolumnbuttons operator" id="equals" value="=">=</button>
+                    <button class="buttons lastcolumnbuttons" id="equals" value="=">=</button>
                 </div>
             </div>
         </div>
