Add functionality to percent button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="buttonsGroup">
                 <div id="first3columns">
                     <button class="buttons firstcolumnbuttons" id="clear" value="clear">C</button>
-                    <button class="buttons firstcolumnbuttons" id="percent">%</button>
+                    <button class="buttons firstcolumnbuttons" id="percent" value="%">%</button>
                     <button class="buttons firstcolumnbuttons operator" id="divide">&#247;</button>
                     <button class="buttons firstcolumnbuttons" id="seven" value="7">7</button>
                     <button class="buttons firstcolumnbuttons" id="eight" value="8">8</button>
