Add functionality to +/- button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <button class="buttons firstcolumnbuttons" id="three" value="3">3</button>
                     <button class="buttons firstcolumnbuttons" id="zero" value="0">0</button>
                     <button class="buttons firstcolumnbuttons" id="decimal" value=".">.</button>
-                    <button class="buttons firstcolumnbuttons" id="plusMinus">+/-</button>
+                    <button class="buttons firstcolumnbuttons" id="plusMinus" value="+/-">+/-</button>
                 </div>
                 <div id="lastcolumn">
                     <button class="buttons lastcolumnbuttons operator" id="multiply" value="*">x</button>
