--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="first3columns">
                     <button class="buttons firstcolumnbuttons" id="clear" value="clear">C</button>
                     <button class="buttons firstcolumnbuttons" id="percent" value="%">%</button>
-                    <button class="buttons firstcolumnbuttons operator" id="divide">&#247;</button>
+                    <button class="buttons firstcolumnbuttons operator" id="divide" value="/">&#247;</button>
                     <button class="buttons firstcolumnbuttons" id="seven" value="7">7</button>
                     <button class="buttons firstcolumnbuttons" id="eight" value="8">8</button>
                     <button class="buttons firstcolumnbuttons" id="nine" value="9">9</button>
